# netdev-labs

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
commands/: main.py
labs/netobs/: docker-compose.yml
labs/netobs/docker-compose.d/: collectors.yml  databases.yml  visualization.yml
