[project]
name = "netdev-labs"
version = "0.1.0"
description = "Example Network Development and Observability Labs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "labcli>=0.2.0"
]

[project.scripts]
lab = "commands.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commands"]